<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/main_bg"
    tools:context="com.example.bugssolveinc.bangou.activity.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:background="@drawable/half_circle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.example.bugssolveinc.bangou.font.MyTextviewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="Maths"
                    android:gravity="center"
                    android:textColor="@color/main_bg"/>

                <com.example.bugssolveinc.bangou.font.MyTextviewLight
                    android:id="@+id/tv_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="Workout"
                    android:gravity="center"/>


            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="match_parent"
                android:paddingBottom="10dp">

                <ImageView
                    android:background="@drawable/bangoe_logo"
                    android:layout_width="145dp"
                    android:gravity="center"
                    android:layout_height="match_parent"/>


            </LinearLayout>-->

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.25"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:elevation="20dp"
                        android:background="@drawable/circle_splash">

                        <com.example.bugssolveinc.bangou.font.MyTextviewLight
                            android:id="@+id/btn_play"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/play"
                            android:textColor="@color/parts_main"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center|top">

                        <LinearLayout
                            android:layout_width="95dp"
                            android:layout_height="95dp"
                            android:gravity="center"
                            android:elevation="20dp"
                            android:background="@drawable/circle_splash">

                            <com.example.bugssolveinc.bangou.font.MyTextviewLight
                                android:id="@+id/btn_rate"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/rate"
                                android:textColor="@color/parts_main"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center|top">

                        <LinearLayout
                            android:layout_width="95dp"
                            android:layout_height="95dp"
                            android:gravity="center"
                            android:elevation="20dp"
                            android:background="@drawable/circle_splash">

                            <com.example.bugssolveinc.bangou.font.MyTextviewLight
                                android:id="@+id/btn_help"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/help"
                                android:textColor="@color/parts_main"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_weight="2.45"
            android:orientation="horizontal"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_height="match_parent"
                android:background="@drawable/sound_back"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="15dp">


                <ImageView
                    android:id="@+id/iv_set_music"
                    android:src="@drawable/sound"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



            <LinearLayout
                android:layout_weight="1"
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/share_back">

                <ImageView
                    android:id="@+id/iv_share"
                    android:src="@drawable/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>




        </LinearLayout>


    </LinearLayout>



</LinearLayout>
